--- a/src/Resources/Styles/Button.xaml
+++ b/src/Resources/Styles/Button.xaml
@@ -3,7 +3,7 @@
     <!-- 无边框按钮（也是默认样式） -->
     <Style x:Key="Style.Button" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="TextElement.Foreground" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="TextElement.Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="Opacity" Value="0.9"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
@@ -48,7 +48,7 @@
     </Style>
     <Style x:Key="Style.Button.AccentBordered" BasedOn="{StaticResource Style.Button}" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{DynamicResource Brush.Accent1}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="BorderThickness" Value="1"/>
         <Setter Property="Padding" Value="8,0"/>
     </Style>
