--- a/src/Resources/Styles/CheckBox.xaml
+++ b/src/Resources/Styles/CheckBox.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style TargetType="{x:Type CheckBox}">
-        <Setter Property="Foreground" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
 
