--- a/src/Resources/Styles/Label.xaml
+++ b/src/Resources/Styles/Label.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Style.Label" TargetType="{x:Type Label}">
-        <Setter Property="Foreground" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
     </Style>
