--- a/src/Resources/Styles/Path.xaml
+++ b/src/Resources/Styles/Path.xaml
@@ -4,7 +4,7 @@
         <Setter Property="Width" Value="16"/>
         <Setter Property="Height" Value="16"/>
         <Setter Property="Stretch" Value="Uniform"/>
-        <Setter Property="Fill" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="Fill" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
@@ -12,7 +12,7 @@
 
     <Style x:Key="Style.WindowControlIcon" TargetType="{x:Type Path}">
         <Setter Property="Stretch" Value="None"/>
-        <Setter Property="Fill" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="Fill" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
         <Setter Property="RenderOptions.BitmapScalingMode" Value="HighQuality"/>
