--- a/src/Resources/Styles/RadioButton.xaml
+++ b/src/Resources/Styles/RadioButton.xaml
@@ -1,7 +1,7 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="{x:Type RadioButton}">
-        <Setter Property="Foreground" Value="{DynamicResource Brush.FG}"/>
+        <Setter Property="Foreground" Value="{DynamicResource Brush.FG1}"/>
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="Template">
             <Setter.Value>
