--- a/src/Resources/Styles/ToggleButton.xaml
+++ b/src/Resources/Styles/ToggleButton.xaml
@@ -1,18 +1,20 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="Style.ToggleButton.Expender" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Grid Background="Transparent" Margin="4,0">
+                    <Grid Background="{TemplateBinding Background}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
                         <Path
-                            x:Name="ExpanderIcon"
                             Grid.Column="0"
+                            x:Name="ExpanderIcon"
+                            Margin="4,0,0,0"
                             Width="10" Height="10"
                             Style="{DynamicResource Style.Icon}"
                             Data="{DynamicResource Icon.Down}"
@@ -23,7 +25,7 @@
                             </Path.RenderTransform>
                         </Path>
                         
-                        <ContentPresenter Grid.Column="1"/>
+                        <ContentPresenter Grid.Column="1" Margin="0,0,4,0"/>
                     </Grid>
 
                     <ControlTemplate.Triggers>
@@ -99,7 +101,7 @@
                             <Setter TargetName="Icon" Property="Data" Value="{DynamicResource Icon.Vertical}"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Icon" Property="Fill" Value="{DynamicResource Brush.Accent1}"/>
+                            <Setter TargetName="Icon" Property="Fill" Value="{DynamicResource Brush.FG1}"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
@@ -122,7 +124,7 @@
                             Width="12"
                             Style="{DynamicResource Style.Icon}"
                             Fill="Transparent"
-                            Stroke="{DynamicResource Brush.FG}"
+                            Stroke="{DynamicResource Brush.FG1}"
                             StrokeThickness=".4"
                             Data="{DynamicResource Icon.Tree}"/>
                     </Grid>
@@ -152,7 +154,7 @@
                             Width="12"
                             Style="{DynamicResource Style.Icon}"
                             Fill="Transparent"
-                            Stroke="{DynamicResource Brush.FG}"
+                            Stroke="{DynamicResource Brush.FG1}"
                             StrokeThickness=".4"
                             Data="{DynamicResource Icon.SplitVertical}"/>
                     </Grid>
