--- a/src/UI/DeleteBranch.xaml
+++ b/src/UI/DeleteBranch.xaml
@@ -25,7 +25,7 @@
         <Label Grid.Row="2" Grid.Column="0" HorizontalAlignment="Right" Content="Branch :"/>
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
             <Path Width="12" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Branch}" Margin="4,0"/>
-            <TextBlock x:Name="branchName" Text="master" Foreground="{StaticResource Brush.FG}" VerticalAlignment="Center"/>
+            <TextBlock x:Name="branchName" Text="master" Foreground="{StaticResource Brush.FG1}" VerticalAlignment="Center"/>
         </StackPanel>
 
         <Grid Grid.Row="4" Grid.ColumnSpan="2">
